# analog-noise

./: .gitignore  README.md  TODO.md  flake.nix  generate-only-jlc.sh  generate-pcb-outputs.sh
firmware/lib/stm32f0xx-hal/: Cargo.toml  rust-toolchain.toml
firmware/lib/stm32f0xx-hal/src/: delay.rs  delay_ns.rs  gpio.rs  lib.rs  spi.rs
firmware/test1/: Cargo.toml  README.md  build.sh  decode_rtt.js  flash-dfu.sh  memory.x  run_probe_rs.sh  rust-toolchain.toml
firmware/test1/.cargo/: config.toml
firmware/test1/src/: bootloader.rs  dac.rs  epd.rs  gen_sine.py  ims.rs  lib.rs  main.rs  spi.rs  touch.rs  usb_serial.rs
hardware/: .gitignore  kibot.common.yaml
hardware/pcb1/: analog-noise-generator.kibot.yaml  analog-noise-generator.kicad_pcb  analog-noise-generator.kicad_prl  analog-noise-generator.kicad_pro  analog-noise-generator.kicad_sch  analog-noise-generator.xml  fp-lib-table
hardware/pcb1/3d/: USB_C_Receptacle_HRO_TYPE-C-31-M-12.wrl
hardware/pcb1/analog-noise-generator/: analog-noise-generator.kicad_pcb  analog-noise-generator.kicad_prl  analog-noise-generator.kicad_pro  analog-noise-generator.kicad_sch
hardware/pcb1/analog-noise-generator.pretty/: PJ-211A.kicad_mod  USB_C_Receptacle_HRO_TYPE-C-31-M-12.kicad_mod
hardware/pcb1/analog-noise-generator/analog-noise-generator.pretty/: TestPoint_THTPad_small.kicad_mod
nix/: InteractiveHtmlBom.nix  kiauto.nix  kibot.nix  kidiff.nix  kikit.nix  pcbnewTransition.nix  pybars3.nix  pymeta3.nix  qrcodegen.nix  recordmydesktop.nix  svgutils.nix
