[package]
name = "analog-noise-test1"
repository = "https://github.com/BBBSnowball/analog-noise"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32f0xx-hal = { version = "0.18", features = ["stm32f072", "rt", "stm32-usbd"]}
usb-device = "0.2.7"
usbd-serial = "0.1.1"
## Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

#[dependencies]
#embedded-hal = "0.2.7"
#nb = "1"
#panic-semihosting = "0.6.0"
