[package]
name = "analog-noise-test1"
repository = "https://github.com/BBBSnowball/analog-noise"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
#stm32f0xx-hal = { version = "0.18", features = ["stm32f072", "rt", "stm32-usbd"] }
stm32f0xx-hal = { version = "0.18", features = ["stm32f072", "rt", "stm32-usbd"], path = "../lib/stm32f0xx-hal" }
usb-device = "0.2.7"
usbd-serial = "0.1.1"
rtt-target = "0.5.0"
#defmt = "0.3.0"
#defmt-rtt = "0.4"
## Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
ssd1680 = "0.2.0"
embedded-hal = "1.0.0"
#embedded-hal-old = { package = "embedded-hal", version = "0.2" }
embedded-hal-bus = "0.2.0"
embedded-graphics = "0.8.1"
# portable-atomic is used by embedded-hal-bus. We have to enable its single-core feature to make compare_exchange available.
portable-atomic = { version = "1", features = ["require-cas", "unsafe-assume-single-core"] }

#[dependencies]
#embedded-hal = "0.2.7"
#nb = "1"

[build-dependencies]
#cargo-binutils = "0.3"
#cargo-bloat = "0.12"
#probe-rs-cli = "1.0"
#probe-rs-debugger = ""

[profile.release]
debug = true

[profile.dev]
# We have to optimize in debug builds to make it fit.
opt-level = "s"
